--- a/composer.json
+++ b/composer.json
@@ -15,20 +15,20 @@
   ],
   "type": "yii2-extension",
   "require": {
-    "php": ">=5.4.0",
-    "yiisoft/yii2": "2.0.*",
-    "symfony/process": "2.6.* || 3.* || 4.*",
-    "dragonmantank/cron-expression": "1.*"
+    "yiisoft/yii2": "^2.0",
+    "symfony/process": "^5.1",
+    "dragonmantank/cron-expression": "^3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.8.36"
+    "phpunit/phpunit": "^9.4"
   },
   "suggest": {
     "guzzlehttp/guzzle": "Required to use the thenPing method on schedules (~5.0)."
   },
   "autoload": {
     "psr-4": {
-      "omnilight\\scheduling\\": "src"
+      "omnilight\\scheduling\\": "src",
+      "omnilight\\scheduling\\Tests\\": "tests"
     }
   },
   "extra": {
