--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,15 @@
   ],
   "type": "yii2-extension",
   "require": {
+    "php": ">=8.0",
     "yiisoft/yii2": "^2.0",
     "symfony/process": "^5.1",
-    "dragonmantank/cron-expression": "^3.0"
+    "dragonmantank/cron-expression": "^3.0",
+    "guzzlehttp/guzzle": "7.4.x-dev"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.4"
+    "phpunit/phpunit": "^9.4",
+    "friendsofphp/php-cs-fixer": "2.18.x-dev"
   },
   "suggest": {
     "guzzlehttp/guzzle": "Required to use the thenPing method on schedules (~5.0)."
@@ -35,6 +38,7 @@
     "bootstrap": "omnilight\\scheduling\\Bootstrap"
   },
   "scripts": {
-    "test": "vendor/bin/phpunit"
+    "test": "vendor/bin/phpunit",
+    "cs-fix": "vendor/bin/php-cs-fixer fix"
   }
 }
