--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,6 @@
     "scheduling",
     "cron"
   ],
-  "minimum-stability": "dev",
   "authors": [
     {
       "name": "Pavel Agalecky",
@@ -16,14 +15,12 @@
   "type": "yii2-extension",
   "require": {
     "php": ">=8.0",
-    "yiisoft/yii2": "^2.0",
     "symfony/process": "^5.1",
-    "dragonmantank/cron-expression": "^3.0",
-    "guzzlehttp/guzzle": "7.4.x-dev"
+    "dragonmantank/cron-expression": "^3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.4",
-    "friendsofphp/php-cs-fixer": "2.18.x-dev"
+    "friendsofphp/php-cs-fixer": "^2.16"
   },
   "suggest": {
     "guzzlehttp/guzzle": "Required to use the thenPing method on schedules (~5.0)."
